Fixing git being weird
Should be fine now, and the files should all be recovered.