@@ -1,6 +1,7 @@
 package io.github.thecsdev.tcdcommons.util.io.http;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 
@@ -29,9 +30,9 @@ public final class TcdWebApiPerson
 			this.name      = this.data.get("name").getAsString();
 			this.contact   = new TcdContactInformation();
 			this.avatarUrl = this.data.has("avatar_url") ?
-					new URL(this.data.get("avatar_url").getAsString()) :
+					URI.create(this.data.get("avatar_url").getAsString()).toURL() :
 					this.contact.getJson().has("avatar_url") ?
-							new URL(this.contact.getJson().get("avatar_url").getAsString()) :
+							URI.create(this.contact.getJson().get("avatar_url").getAsString()).toURL() :
 							null;
 		}
 		catch(Exception e) { throw new IOException("Failed to read JSON data.", e); }
@@ -78,7 +79,7 @@ public final class TcdWebApiPerson
 				
 				//try to load fields
 				if(this.data.has("homepage"))
-					try { homepage = new URL(this.data.get("homepage").getAsString()); } catch(Exception e) {}
+					try { homepage = URI.create(this.data.get("homepage").getAsString()).toURL(); } catch(Exception e) {}
 				
 				//assign field values
 				this.homepageUrl = homepage;
